# codesm

./: .gitignore  README.md  example-mcp.json  main.py  mcp-servers.json  pyproject.toml
codesm/: __init__.py  cli.py  cli_threads.py  cli_tools.py  formatter.py
codesm/agent/: agent.py  loop.py  prompt.py
codesm/auth/: __init__.py  claude_oauth.py  credentials.py
codesm/config/: config.py  schema.py
codesm/index/: __init__.py  chunking.py  cli.py  index_store.py  indexer.py  watcher.py
codesm/lsp/: __init__.py  client.py  server.py  servers.py
codesm/mcp/: __init__.py  client.py  codegen.py  config.py  manager.py  sandbox.py  tool.py
codesm/memory/: __init__.py  cli.py  extractor.py  inject.py  models.py  retrieval.py  store.py
codesm/permission/: __init__.py  permission.py
codesm/provider/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py  router.py
codesm/review/: refactor.py  reviewer.py
codesm/rules/: __init__.py  discovery.py  init.py
codesm/search/: __init__.py  embeddings.py
codesm/server/: server.py
codesm/session/: __init__.py  context.py  message.py  revert.py  search.py  session.py  summarize.py  title.py
codesm/skills/: __init__.py  loader.py  manager.py
codesm/snapshot/: __init__.py  snapshot.py
codesm/storage/: storage.py
codesm/tool/: base.py  (+49 more)
core/: Cargo.toml  pyproject.toml
core/src/: diff.rs  index.rs  lib.rs  platform.rs  sandbox.rs
docs/: config.mjs  skills.md
docs-site/: README.md  astro.config.mjs  config.mjs  package.json  tsconfig.json
examples/: mcp_code_execution_demo.py  mcp_demo.py
prompts/: system.txt
tests/: __init__.py  conftest.py  test_mcp.py  test_parallel_tasks.py  test_rules.py  test_session.py  test_skills.py  test_snapshot.py  test_tools.py
(+41 files in other folders)
