[package]
name = "codesm_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "codesm_core"
crate-type = ["cdylib"]  # For PyO3 Python extension

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
similar = "2.6"          # Diffing
ignore = "0.4"           # .gitignore-aware file walking
walkdir = "2.5"          # Directory traversal
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
